# knncolle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-install.yaml  create-tag.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in  Findhnswlib.cmake
docs/: AnnoyBase_8hpp_source.html  Annoy_8hpp.html  Annoy_8hpp__dep__incl.map  Annoy_8hpp__dep__incl.md5  Annoy_8hpp__incl.map  Annoy_8hpp__incl.md5  Annoy_8hpp_source.html  Base_8hpp.html  Base_8hpp__dep__incl.map  Base_8hpp__dep__incl.md5  Base_8hpp__incl.map  Base_8hpp__incl.md5  Base_8hpp_source.html  BruteForce_8hpp.html  BruteForce_8hpp__dep__incl.map  BruteForce_8hpp__dep__incl.md5  BruteForce_8hpp__incl.map  BruteForce_8hpp__incl.md5  BruteForce_8hpp_source.html  Bruteforce_8hpp.html  Bruteforce_8hpp__dep__incl.map  Bruteforce_8hpp__dep__incl.md5  Bruteforce_8hpp__incl.map  Bruteforce_8hpp__incl.md5  Bruteforce_8hpp_source.html  Builder_8hpp.html  Builder_8hpp__dep__incl.map  Builder_8hpp__dep__incl.md5  Builder_8hpp__incl.map  Builder_8hpp__incl.md5  Builder_8hpp_source.html  Doxyfile  Hnsw_8hpp.html  Hnsw_8hpp__dep__incl.map  Hnsw_8hpp__dep__incl.md5  Hnsw_8hpp__incl.map  Hnsw_8hpp__incl.md5  Hnsw_8hpp_source.html  Kmknn_8hpp.html  Kmknn_8hpp__dep__incl.map  (+386 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+38 more)
include/knncolle/: BruteForce.hpp  Bruteforce.hpp  Builder.hpp  Kmknn.hpp  L2Normalized.hpp  Matrix.hpp  MockMatrix.hpp  NeighborQueue.hpp  NumericType.hpp  Prebuilt.hpp  Searcher.hpp  Vptree.hpp  distances.hpp  find_nearest_neighbors.hpp  knncolle.hpp  load.hpp  load_prebuilt.hpp  report_all_neighbors.hpp  utils.hpp
include/knncolle/Annoy/: Annoy.hpp  AnnoyBase.hpp
include/knncolle/BruteForce/: BruteForce.hpp
include/knncolle/Hnsw/: Hnsw.hpp
include/knncolle/Kmknn/: Kmknn.hpp
include/knncolle/VpTree/: VpTree.hpp
include/knncolle/utils/: Base.hpp  MatrixStore.hpp  NeighborQueue.hpp  distances.hpp  find_nearest_neighbors.hpp  knn_base.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: Annoy.cpp  BruteForce.cpp  Bruteforce.cpp  Dispatch.cpp  Hnsw.cpp  Kmknn.cpp  L2Normalized.cpp  NumericType.cpp  TestCore.hpp  VpTree.cpp  Vptree.cpp  distances.cpp  find_nearest_neighbors.cpp  load_prebuilt.cpp  misc.cpp
